--- a/prospera/src/Components/Footer/Footer.css
+++ b/prospera/src/Components/Footer/Footer.css
@@ -1,8 +1,9 @@
 .footer {
-    position: absolute;
+    position:static;
     left: 0;
     bottom: 0;
     width: 100%;
+    margin-top: 50px;
     background-color: rgba(60, 57, 64, 0.3);
     color: white;
     /* text-align: center; */
