--- a/prospera/src/Components/LoginPage/LoginPage.css
+++ b/prospera/src/Components/LoginPage/LoginPage.css
@@ -3,6 +3,7 @@
     justify-content: center;
     align-items: center;
     color: black;
+    margin: 11rem 0 0 0;
 }
 
 .loginBox {
@@ -10,8 +11,8 @@
     background-color: white;
     border-radius: 20px;
     overflow: hidden;
-    width: 58rem;
-    height: 42rem;
+    width: 63rem;
+    height: 39rem;
     box-shadow: 0 0 20px rgba(0,0,0,0.1);
 }
 
@@ -28,7 +29,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0 0 80px 0;
+    margin: 0 0 60px 0;
 }
 
 .loginDescription h1 {
@@ -68,7 +69,7 @@
     object-fit: cover;
 }
 
-.loginButton {
+.loginButton, .registerButton {
     margin: 15px 0 0 0;
     padding: 15px 30px;
     border: 2px solid #2c2c2c;
@@ -84,7 +85,13 @@
     font-weight: bold;
 }
 
-.loginButton::after {
+/* Override previous BG color and font color selections for register button */
+.registerButton {
+    background-color: #ffffff;
+    color: #1a1a1a;
+}
+
+.loginButton::after, .registerButton::after {
     content: "";
     position: absolute;
     top: 0;
@@ -100,53 +107,17 @@
     transition: transform 0.5s ease;
 }
 
-.loginButton:hover::after {
+.loginButton:hover::after, .registerButton:hover::after {
     transform: scale(4);
 }
 
-.registerButton:hover {
+.loginButton:hover {
     border-color: #666666;
     background: #292929;
 }
 
-.registerButton {
-    margin: 15px 0 0 0;
-    padding: 15px 30px;
-    border: 2px solid #2c2c2c;
-    background-color: #ffffff;
-    color: #1a1a1a;
-    font-size: 1rem;
-    cursor: pointer;
-    border-radius: 30px;
-    transition: all 0.4s ease;
-    outline: none;
-    position: relative;
-    overflow: hidden;
-    font-weight: bold;
-}
-
-.registerButton::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: radial-gradient(
-        circle,
-        rgba(255, 255, 255, 0.25) 0%,
-        rgba(255, 255, 255, 0) 70%
-    );
-    transform: scale(0);
-    transition: transform 0.5s ease;
-}
-
-.registerButton:hover::after {
-    transform: scale(4);
-}
-
 .registerButton:hover {
-    border-color: #292929;
-    background: #5b00ed;
-    color: #ffffff;
+    border-color: #9b62f8;
+    background: #6303FF;
+    color: #fff;
 }
