--- a/prospera/src/Components/AboutPage/AboutPage.css
+++ b/prospera/src/Components/AboutPage/AboutPage.css
@@ -1,5 +1,5 @@
 .aboutBody{
-    font-size: 30px;
+    font-size: 1.5rem;
     margin-bottom: 1rem;
     /* margin-top: 15rem; */
 
@@ -91,7 +91,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 14rem 0;
+    margin-top: 5rem;
+    margin-bottom: 19rem;
 
     color: #fff;
 }
