--- a/prospera/src/Components/LandingPage/LandingPage.css
+++ b/prospera/src/Components/LandingPage/LandingPage.css
@@ -1,50 +1,50 @@
 .landingPageContent{
+    position: relative;
+    text-align: center;
+    
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    margin-bottom: 19rem;
+}
+
+.landingTexts{
+    position: absolute;
 }
 
 .landingPageContent h1{
-    font-size: 3rem;
+    font-size: 4rem;
     font-weight: bold;
-    margin: 3rem 1rem;
+    margin: 2.5rem 1rem;
     line-height: 1.2;
-
+    font-style: italic;
     color: #fff;
 }
 
 .landingSlogan{
     font-size: 1.5rem;
-    font-weight: normal;
+    padding: 1px 5px;
 
-    margin: 1rem;
-    padding: 0rem 4rem;
-
-    /* background-color: rgba(60, 57, 64, 0.4); */
-
-    /* border: 1px solid rgba(0, 0, 0, 0.1); */
     border-radius: 10px;
 
     color: #fff;
-    /* box-shadow: 15px 15px 30px rgb(25, 25, 25),
-        -15px -15px 30px rgb(60, 60, 60); */
-
-
-    backdrop-filter: blur(10px) saturate(70%);
-    
+    /* backdrop-filter: blur(10px) saturate(70%); */
 }
 
 .landingSlogan p{
-    position: relative;
     z-index: 10;
-
+    margin: 6px;
+    font-weight:600;
 }   
 
 .landingImg {
-    width: 300px;
-    height: 200px;
+    width: 100vw;
+    height: 30vh;
     object-fit: cover;
     object-position: 100%;
-
+    border-radius: 5px;
+    opacity: 0.7;
+    z-index: 0;
 }
