--- a/prospera/src/Components/AboutPage/AboutPage.css
+++ b/prospera/src/Components/AboutPage/AboutPage.css
@@ -91,7 +91,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 5rem;
+    margin-top: 2rem;
     margin-bottom: 19rem;
 
     color: #fff;
@@ -104,10 +104,22 @@
 
 .team {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+
     margin-top: 2rem;
+    height: 50vh;
+    border-radius: 7px;
+
+    background-color: rgba(255, 255, 255, 0.3);
+}
+
+.teamIcons {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 1rem;
 }
 
 .teamMember {
