--- a/prospera/src/Components/Dashboard/Dashboard.css
+++ b/prospera/src/Components/Dashboard/Dashboard.css
@@ -59,12 +59,14 @@
 }
 
 .dashboardBankAccts h3{
-    background-color: #555555;
-    color: #fff;
+    background-color: #555;
+    color: white;
+    padding: 10px 150px;
+    margin: 10px 0;
+    border-radius: 5px;
 
-    /* width: 100%; */
-
-
+    height: 20%;
+    width: 100%;
 }
 
 .right-column {
