--- a/prospera/src/Components/LoginPage/LoginPage.css
+++ b/prospera/src/Components/LoginPage/LoginPage.css
@@ -72,7 +72,7 @@
     object-fit: cover;
 }
 
-.loginButton, .registerButton {
+.loginButton, .goToRegisterButton {
     margin: 15px 0 0 0;
     padding: 15px 30px;
     border: 2px solid #2c2c2c;
@@ -88,13 +88,13 @@
     font-weight: bold;
 }
 
-/* Override previous BG color and font color selections for register button */
-.registerButton {
+/* Override previous BG color and font color selections for register redirect button */
+.goToRegisterButton {
     background-color: #ffffff;
     color: #1a1a1a;
 }
 
-.loginButton::after, .registerButton::after {
+.loginButton::after, .goToRegisterButton::after {
     content: "";
     position: absolute;
     top: 0;
@@ -110,7 +110,7 @@
     transition: transform 0.5s ease;
 }
 
-.loginButton:hover::after, .registerButton:hover::after {
+.loginButton:hover::after, .goToRegisterButton:hover::after {
     transform: scale(4);
 }
 
@@ -119,7 +119,7 @@
     background: #292929;
 }
 
-.registerButton:hover {
+.goToRegisterButton:hover {
     border-color: #9b62f8;
     background: #6303FF;
     color: #fff;
