Add forgot password page redirect to login form

--- a/prospera/src/Components/ForgotPasswordPage/ForgotPasswordPage.css
+++ b/prospera/src/Components/ForgotPasswordPage/ForgotPasswordPage.css
@@ -78,7 +78,7 @@
     object-fit: cover;
 }
 
-.forgotButton, .goToRegisterButton {
+.forgotButton {
     margin: 15px 0 0 0;
     padding: 15px 30px;
     border: 2px solid #2c2c2c;
