--- a/prospera/src/Components/ForgotPasswordPage/ForgotPasswordPage.css
+++ b/prospera/src/Components/ForgotPasswordPage/ForgotPasswordPage.css
@@ -6,6 +6,24 @@
     margin: 6rem 0 0 0;
 }
 
+.return {
+    text-decoration: none;
+}
+
+.return span {
+    display: flex;
+    color: #6303FF;
+    font-size: 40px;
+    font-weight: bold;
+    transition: background 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.return span:hover {
+    color: #390094;
+    font-weight: bold;
+    transform: translateY(-3px);
+}
+
 .forgotBox {
     display: flex;
     background-color: white;
@@ -19,9 +37,9 @@
 .forgotForm {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
     flex: 1;
-    gap: 15px;
+    /* gap: 15px; */
     padding: 20px;
 }
 
@@ -29,7 +47,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0 0 60px 0;
+    margin: 48px 0 60px 0;
 }
 
 .forgotDescription h1 {
@@ -44,21 +62,29 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 0 0 40px 0;
 }
 
-.showPasswordArea {
+.answerInputArea {
     display: flex;
+    flex-direction: column;
     gap: 8px;
 }
 
-.showPasswordArea input {
+.showAnswerArea {
+    display: flex;
+    margin: 8px 0 0 0;
+    gap: 8px;
+}
+
+.showAnswerArea input {
     margin: 0;
 }
 
 .forgotButtonArea {
     display: flex;
     flex-direction: column;
-    margin: 15px 0 0 0;
+    margin: 50px 0 0 0;
     gap: 0.8rem;
 }
 
