--- a/prospera/src/Components/RegisterPage/RegisterPage.css
+++ b/prospera/src/Components/RegisterPage/RegisterPage.css
@@ -11,7 +11,7 @@
     background-color: white;
     border-radius: 20px;
     overflow: hidden;
-    width: 68rem;
+    width: 74rem;
     height: 47rem;
     box-shadow: 0 0 20px rgba(0,0,0,0.1);
 }
@@ -21,15 +21,15 @@
     flex-direction: column;
     justify-content: center;
     flex: 1;
-    gap: 15px;
-    padding: 20px;
+    gap: 10px;
+    padding: 30px;
 }
 
 .registerDescription {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0 0 20px 0;
+    margin: 3px 0 8px 0;
 }
 
 .registerDescription a {
@@ -53,11 +53,9 @@
     margin: 0;
 }
 
-.registerButtonArea {
-    display: flex;
-    flex-direction: column;
-    margin: 15px 0 0 0;
-    gap: 0.8rem;
+.questionArea p {
+    text-align: center;
+    margin: 8px 0 0 0;
 }
 
 .imageArea {
@@ -74,6 +72,12 @@
     max-width: 250%;
     max-height: 150%;
     object-fit: cover;
+}
+
+.registerButtonArea {
+    display: flex;
+    flex-direction: column;
+    gap: 0.8rem;
 }
 
 .registerButton {
