--- a/prospera/src/Components/LandingPage/LandingPage.css
+++ b/prospera/src/Components/LandingPage/LandingPage.css
@@ -4,10 +4,10 @@
     
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
 
-    margin-bottom: 19rem;
+    height: 100vh;
 }
 
 .landingTexts{
@@ -47,4 +47,12 @@
     border-radius: 5px;
     opacity: 0.7;
     z-index: 0;
+}
+
+#contactPage{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin-bottom: 100px;
 }
