--- a/prospera/src/Components/NewsCardDetail/NewsCardDetail.css
+++ b/prospera/src/Components/NewsCardDetail/NewsCardDetail.css
@@ -11,4 +11,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+}
+
+.articleContainer img{
+    width: 70%;
+    height: auto;
+    object-fit: cover;
+    object-position: 100%;
+    /* border-radius: 5px; */
 }
