Finish working on log in and register (navigates to dashboard, updates DB w/ appropriate info, tokens generated) and redirect user to article URL rather than loading content on page

--- a/prospera/src/Components/NewsFeed/NewsFeed.css
+++ b/prospera/src/Components/NewsFeed/NewsFeed.css
@@ -13,6 +13,15 @@
     align-items: center;
 }
 
+.newsCategories{
+    display: flex;
+    justify-content: center;
+    margin: 20px 20px;
+}
+
+.newsCategories a{
+    margin: 20px 20px;
+}
 .newsArticleCards {
     display: grid;
     max-width: 1200px;
