--- a/prospera/src/Components/ChatbotPage/ChatbotPage.css
+++ b/prospera/src/Components/ChatbotPage/ChatbotPage.css
@@ -11,6 +11,7 @@ body {
 .chatbotContainer {
     display: flex;
     height: 100vh;
+    margin-bottom: 270px;
 }
 
 .sidebar {
@@ -59,7 +60,7 @@ body {
 }
 
 .messageContainer {
-    height: calc(100vh - 150px);
+    height: calc(100vh - 180px);
     overflow-y: auto;
     padding: 10px;
     background-color: #e1bee7; /* Very light purple background for messages */
