--- a/prospera/src/Components/Header/Header.css
+++ b/prospera/src/Components/Header/Header.css
@@ -21,6 +21,7 @@ header {
 .headerLeft {
     display: flex;
     justify-content: flex-start;
+    align-items: center;
 }
 
 .headerLeft nav {
@@ -79,6 +80,8 @@ header a {
     position: absolute;
     top: 0;
     left: 0;
+    width: 100%;
+    height: 100%;
     background: radial-gradient(
         circle,
         rgba(255, 255, 255, 0.25) 0%,
