--- a/prospera/src/Components/NewsFeed/NewsFeed.css
+++ b/prospera/src/Components/NewsFeed/NewsFeed.css
@@ -77,3 +77,53 @@
     border-color: #666666;
     background: #292929;
 }
+
+.newsCategories a{
+    padding: 10px;
+
+    cursor: pointer;
+    border-radius: 10px;
+    transition: all 0.4s ease;
+
+    outline: none;
+    position: relative;
+    overflow:hidden ;
+    
+    margin: 0 10px;
+
+    background-color: #000;
+    color: #fff;
+    text-decoration: none;
+}
+
+.newsCategories{
+    display: flex;
+}
+
+
+.newsCategories a::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: radial-gradient(
+        circle,
+        rgba(255, 255, 255, 0.25) 0%,
+        rgba(255, 255, 255, 0) 70%
+    );
+    transform: scale(0);
+    transition: transform 0.5s ease;
+}
+
+.newsCategories a:hover {
+    border-color: #666666;
+    background: #292929;
+}
+
+.newsCategories a.active {
+    color: #fff;
+    background-color: #6303FF;
+}
+
