Add ability for user to reset password using forgot password page

--- a/prospera/src/Components/ForgotPasswordPage/ForgotPasswordPage.css
+++ b/prospera/src/Components/ForgotPasswordPage/ForgotPasswordPage.css
@@ -29,17 +29,17 @@
     background-color: white;
     border-radius: 20px;
     overflow: hidden;
-    width: 63rem;
-    height: 39rem;
+    width: 78rem;
+    height: 57rem;
     box-shadow: 0 0 20px rgba(0,0,0,0.1);
 }
 
 .forgotForm {
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
+    gap: 10px;
+    justify-content: center;
     flex: 1;
-    /* gap: 15px; */
     padding: 20px;
 }
 
@@ -47,7 +47,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 48px 0 60px 0;
+    margin: 20px 0 60px 0;
 }
 
 .forgotDescription h1 {
@@ -62,7 +62,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0 0 40px 0;
 }
 
 .answerInputArea {
@@ -143,4 +142,27 @@
 .forgotButton:hover {
     border-color: #666666;
     background: #292929;
+}
+
+.forgotButton:disabled {
+    color: #ebebeb;
+    border-color: #8d8d8d;
+    background: #7d7d7d;
+    cursor: not-allowed;
+}
+
+.forgotButton:disabled:hover {
+    border-color: #8d8d8d;
+    background: #7d7d7d;
+    transition: none;
+}
+
+.forgotButton:disabled:hover::after {
+    transform: none;
+    background: none;
+    transition: none;
+}
+
+.forgotButton:disabled::after {
+    transition: none;
 }
