--- a/prospera/src/Components/Footer/Footer.css
+++ b/prospera/src/Components/Footer/Footer.css
@@ -1,21 +1,21 @@
 .footer {
     position:absolute;
-    bottom: 0;
     width: 100vw;
 
-    background-color: rgba(60, 57, 64, 0.3);
-    color: white;
+    background-color: #141414;
+    color: #fff;
 
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
 }
 
 .footerLinks {
     display: flex;
-    justify-content: space-between;
-    padding: 10px;
-    width: 20%;
+    justify-content: space-evenly;
+    padding: 0 20px;
+    width: 100%;
     text-align: center;
 }
 
@@ -24,7 +24,26 @@
     text-decoration: none;
 }
 
+.abt {
+    text-align: end;
+}
+
+h2 {
+    margin-top: 20px;
+}
 
 .footerLinks h2{
     font-weight: normal;
+    text-align: center;
+}
+
+.footerLogo img {
+    width: 80px;
+    height: 65px;
+    border-radius: 15px;
+    margin: 10px 0;
+}
+
+.social img {
+    color: #fff;
 }
