--- a/prospera/src/Components/Header/Header.css
+++ b/prospera/src/Components/Header/Header.css
@@ -1,4 +1,4 @@
-header {
+.mainHeader {
     position: fixed;
     display: flex;
     justify-content: space-between;
@@ -31,7 +31,7 @@ header {
     margin: 0 10px;
 }
 
-header a {
+.mainHeader a {
     margin: 0 10px;
     color: #000;
     text-decoration: none;
