--- a/prospera/src/Components/LandingPage/LandingPage.css
+++ b/prospera/src/Components/LandingPage/LandingPage.css
@@ -7,8 +7,6 @@
     justify-content: flex-start;
     align-items: center;
 
-    height: 100vh;
-
     --img-scale: 1.001;
     --title-color: #000;
     --link-icon-translate: -20px;
@@ -57,8 +55,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
 
-    margin-bottom: 100px;
+.headerSpace {
+    height: 81px;
 }
 
 .landingCardContainer {
@@ -70,7 +70,7 @@
     transition: all 0.4s ease-in-out;
     overflow: hidden;
     color: #000;
-    margin-top: 200px;
+    margin-top: 140px;
 }
 .landingCardContainer img {
     max-width: 100%;
@@ -80,7 +80,6 @@
 }
 .landingCardContainer h3 {
     font-size: 1.2rem;
-    font-weight: 700;
     margin: 0;
     padding: 16px;
     color: var(--title-color);
@@ -112,11 +111,50 @@
     --title-color: #28666E;
     --link-icon-translate: 0;
     --link-icon-opacity: 1;
-    /* box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px; */
     box-shadow: 10px 10px 60px #BEBEBE,
     -10px -10px 60px #FFFFFF;
 }
 .landingCards {
     display: flex;
     gap: 40px;
+}
+
+.landingPageContent, #aboutPage {
+    position: relative;
+    width: 100%;
+}
+
+@media (max-width: 968px) {
+    .landingPageContent {
+        height: auto;
+    }
+
+    .landingTexts {
+        position: static;
+        margin: 0 auto;
+        width: 100%;
+    }
+
+    .landingPageContent h1 {
+        font-size: 2.5rem;
+        margin: 1.5rem 1rem;
+    }
+
+    .landingSlogan {
+        font-size: 1rem;
+        padding: 5px;
+    }
+
+    .landingImg {
+        height: 20vh;
+    }
+
+    .landingCards {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .landingCardContainer {
+        margin-top: 50px;
+    }
 }
