--- a/prospera/src/index.css
+++ b/prospera/src/index.css
@@ -1,8 +1,6 @@
-html, body, #root {
-  min-height: 100vh;
-  min-width: 100vw;
+html, body {
   margin: 0;
-  padding-top: 25px;
+  padding: 0;
   background: linear-gradient(#6303FF 0%, #000000 100%);
   background-repeat:no-repeat;
   background-size: cover;
@@ -10,4 +8,9 @@ html, body, #root {
   position: relative;
 }
 
-
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; 
+  position: relative;
+}
