--- a/prospera/src/Components/Footer/Footer.css
+++ b/prospera/src/Components/Footer/Footer.css
@@ -1,22 +1,42 @@
 .footer {
-    position:absolute;
     width: 100vw;
 
-    background-color: #141414;
+    background-color: #171717;
     color: #fff;
 
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
+    padding-top: 20px;
+
+    position: absolute;
+    bottom: 0;
+}
+
+.innerFooterCont {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.footerLeft{
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+}
+
+.footerRight{
+    width: 100%;
+    display: flex;
+    align-items: center;
 }
 
 .footerLinks {
     display: flex;
     justify-content: space-evenly;
-    padding: 0 20px;
-    width: 100%;
-    text-align: center;
+    gap: 15px;
+    width: 80%;
 }
 
 .footerLinks a{
@@ -38,12 +58,37 @@ h2 {
 }
 
 .footerLogo img {
-    width: 80px;
-    height: 65px;
+    width: 100px;
+    height: 85px;
     border-radius: 15px;
     margin: 10px 0;
+    margin-left: -4px;
 }
 
-.social img {
+.socials {
+    margin-top: 10px;
+    display: flex;
+    gap: 20px;
+    margin-right: 20px;
+}
+
+.socials img {
     color: #fff;
+    height: 35px;
+    width: 35px;
+}
+
+.socials a {
+    display: inline-flex; 
+    justify-content: center; 
+    align-items: center;
+    border: 1px solid #eeeeee; 
+    border-radius: 50%;
+    padding: 7px; 
+}
+
+hr {
+    width: 90%;
+    color: #ececec;
+    border-width: 0.1px;
 }
