Started the settings feature and fixed some layout issues.

--- a/prospera/src/Components/ChatbotPage/ChatbotPage.css
+++ b/prospera/src/Components/ChatbotPage/ChatbotPage.css
@@ -115,3 +115,7 @@ input[type="text"] {
 button:hover {
     background-color: #ab47bc; /* Lighter purple on hover */
 }
+
+.footerSpace{
+    height: 238.44px;
+}
