--- a/prospera/src/Components/ForgotPasswordPage/ForgotPasswordPage.css
+++ b/prospera/src/Components/ForgotPasswordPage/ForgotPasswordPage.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     color: black;
-    margin: 6rem 0 0 0;
+    margin: 1rem 0 2rem 0;
 }
 
 .return {
@@ -165,4 +165,8 @@
 
 .forgotButton:disabled::after {
     transition: none;
+}
+
+.headerSpace {
+    height: 81px;
 }
