--- a/prospera/src/Components/NewsFeed/NewsFeed.css
+++ b/prospera/src/Components/NewsFeed/NewsFeed.css
@@ -6,12 +6,9 @@
     margin: 20px 15px;
     border-radius: 5px;
 
-    margin-bottom: 300px;
-
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 100px;
 }
 
 .newsCategories{
@@ -230,4 +227,8 @@
 .loadMoreButton:hover {
     border-color: #666666;
     background: #292929;
+}
+
+.headerSpace {
+    height: 81px;
 }
