Able to update information from the frontend to the backend.

--- a/prospera/src/Components/Settings/Settings.css
+++ b/prospera/src/Components/Settings/Settings.css
@@ -15,3 +15,13 @@
     flex-direction: column;
     align-items: center;
 }
+
+.settingsTop {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.settingsTop img {
+    width: 60px;
+}
