--- a/prospera/src/Components/Dashboard/Dashboard.css
+++ b/prospera/src/Components/Dashboard/Dashboard.css
@@ -1,12 +1,25 @@
 .dashboardBody {
-    margin: 55px 0 0 0;
+    margin: 0;
     padding: 0 30px 30px 30px;
 }
 
 .headerSpace {
+    display: flex;
+    justify-content: center;
+    color: white;
+    padding: 0;
+    margin: 100px 0 0 0;
     height: 81px;
 }
 
 .reactGridItem {
     background-color: azure;
+}
+
+.dash {
+    background-color: rgb(33, 33, 33);
+}
+
+.widgetContent {
+    padding: 5px;
 }
