--- a/prospera/src/Components/Dashboard/Dashboard.css
+++ b/prospera/src/Components/Dashboard/Dashboard.css
@@ -1,25 +1,87 @@
-.dashboardBody {
-    margin: 0;
-    padding: 0 30px 30px 30px;
-}
-
 .headerSpace {
-    display: flex;
-    justify-content: center;
-    color: white;
-    padding: 0;
-    margin: 100px 0 0 0;
     height: 81px;
 }
 
+.dashboardTitle{
+    display: flex;
+    justify-content: center;
+
+    color: #000;
+    background-color: #fff;
+
+    padding: 0;
+    margin: 20px 15px;
+    border-radius: 5px;
+
+}
+.dashboardBody {
+    margin: 0;
+    padding: 0 15px 30px 15px;
+    min-height: 70vh;
+}
+
 .reactGridItem {
-    background-color: azure;
+    background-color: #fff;
+    border-radius: 5px;
 }
 
 .dash {
     background-color: rgb(33, 33, 33);
+    padding: 10px 10px 100px 10px;
+    border-radius: 5px;
 }
 
 .widgetContent {
     padding: 5px;
+}
+
+.newWidgetBtn{
+    background-color: #000;
+    color: #fff;
+    text-decoration: none;
+
+    padding: 10px 25px;
+
+    font-size: 1rem;
+    cursor: pointer;
+    border-radius: 10px;
+    transition: all 0.4s ease;
+
+    outline: none;
+    position: relative;
+    overflow:hidden ;
+    align-self: center;
+    
+    width: 150px;
+    margin: 10px auto;
+    display: block;
+}
+
+.newWidgetBtn::after{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: radial-gradient(
+        circle,
+        rgba(255, 255, 255, 0.25) 0%,
+        rgba(255, 255, 255, 0) 70%
+    );
+    transform: scale(0);
+    transition: transform 0.5s ease;
+}
+
+.newWidgetBtn:hover::after{
+    transform: scale(4);
+}
+
+.newWidgetBtn:hover {
+    border-color: #666666;
+    background: #292929;
+}
+
+.widgetEditBtnd img{
+    width: 25px;
 }
