General css layout of the page to make it look more cohesive.

--- a/prospera/src/Components/LoginPage/LoginPage.css
+++ b/prospera/src/Components/LoginPage/LoginPage.css
@@ -51,6 +51,12 @@
     color: #390094;
 }
 
+.loginForm input{
+    padding: 10px;
+    border: 1px solid #ce93d8;
+    border-radius: 5px;
+}
+
 .showPasswordArea {
     display: flex;
     gap: 8px;
