--- a/prospera/src/Components/NewsFeed/NewsCard.css
+++ b/prospera/src/Components/NewsFeed/NewsCard.css
@@ -7,6 +7,7 @@
     transition: all 0.4s ease-in-out;
     overflow: hidden;
     color: #000;
+    padding: 10px;
 
     box-shadow: 20px 20px 60px #bebebe,
     -20px -20px 60px #ffffff;
