--- a/prospera/src/Components/NewsFeed/NewsFeed.css
+++ b/prospera/src/Components/NewsFeed/NewsFeed.css
@@ -233,3 +233,68 @@
 .headerSpace {
     height: 81px;
 }
+
+.nexBtn{
+    display: flex;
+    justify-content: center;
+
+    color: #000;
+    background-color: #fff;
+
+    padding: 0;
+    margin: 20px 15px;
+    border-radius: 5px;
+}
+
+.nexBtn, .prevBtn{
+    background-color: #000;
+    color: #fff;
+    text-decoration: none;
+
+    padding: 10px 10px;
+
+    font-size: 1rem;
+    cursor: pointer;
+    border-radius: 10px;
+    transition: all 0.4s ease;
+
+    outline: none;
+    position: relative;
+    overflow:hidden ;
+    align-self: center;
+    
+    width: 100px;
+    margin: 10px auto;
+    display: block;
+}
+
+.nexBtn::after, .prevBtn::after{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: radial-gradient(
+        circle,
+        rgba(255, 255, 255, 0.25) 0%,
+        rgba(255, 255, 255, 0) 70%
+    );
+    transform: scale(0);
+    transition: transform 0.5s ease;
+}
+
+.nexBtn:hover::after, .prevBtn:hover::after{
+    transform: scale(4);
+}
+
+.nexBtn:hover, .prevBtn:hover {
+    border-color: #666666;
+    background: #292929;
+}
+
+.pagination {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
