--- a/prospera/src/Components/TopicSelectionPage/TopicSelectionPage.css
+++ b/prospera/src/Components/TopicSelectionPage/TopicSelectionPage.css
@@ -1,7 +1,23 @@
 /* TopicSelectionPage.css */
 .topicSelectionContainer {
-    padding: 20px;
-    text-align: center;
+    /* padding: 20px;
+    text-align: center; */
+    background-color: #fff;
+    color: #000;
+    margin-bottom: 300px;
+    
+    margin: 20px 15px;
+    border-radius: 5px;
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+    padding: 10px;
+    min-height: 60vh;
+}
+
+.newsFeedContainer{
 }
 
 .topicsList {
@@ -22,7 +38,7 @@
 }
 
 .topicsList button.selected {
-    background-color: #007bff;
+    background-color: #6303FF;
     color: #fff;
 }
 
@@ -36,13 +52,13 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    background-color: #007bff;
+    background-color: #000;
     color: #fff;
     transition: background-color 0.3s;
 }
 
 .submitBtn:hover, .skipBtn:hover {
-    background-color: #0056b3;
+    background-color: #000;
 }
 
 .headerSpace {
