--- a/prospera/src/Components/AboutPage/AboutPage.css
+++ b/prospera/src/Components/AboutPage/AboutPage.css
@@ -4,6 +4,7 @@
 
 .aboutBody{
     font-size: 1.5rem;
+    margin-top: 1.3rem;
     margin-bottom: 1rem;
     margin-left: 100px;
     margin-right: 100px;
@@ -15,25 +16,38 @@
     color: #fff;
 }
 
+.leftAboutTextArea {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(35, 35, 35);
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    border-radius: 30px;
+    padding: 20px 30px 20px 30px;
+}
+
 .leftAboutBody, .rightAboutBody {
     flex: 1;
     padding: 1rem;
-
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .leftAboutBody h1 {
     font-weight: bold;
     font-size: 3rem;
-    margin-bottom: 1rem;
+    margin: 0 ;
     line-height: 1.2;
 }
 
-.leftAboutBody h1 em {
-    display: block;
-    font-style: italic;
-    font-size: 3.5rem;
+.leftAboutBody span {
+    font-size: 4rem;
+    font-family: 'Outfit';
+    font-weight: 700;
+    color: #af84f4;
+    margin: 0;
+    
 }
 
 .rightAboutBody{
@@ -106,7 +120,7 @@
 }
 
 .teamAbout h2 {
-    font-size: 2rem;
+    font-size: 2.5rem;
     margin-bottom: 1rem;
 }
 
@@ -115,11 +129,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
     padding: 20px;
     border-radius: 7px;
-
     background-color: rgba(255, 255, 255, 0.3);
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .teamIcons {
@@ -127,6 +140,11 @@
     justify-content: space-evenly;
     align-items: center;
     margin-top: 1rem;
+}
+
+.teamIcons p {
+    margin-top: 0.3rem;
+    font-size: 1.2rem;
 }
 
 .teamMember {
@@ -140,6 +158,7 @@
 .teamMember h3 {
     font-size: 1.9rem;
     margin-top: 1rem;
+    margin-bottom: 0;
 }
 
 .teamMember img {
@@ -147,11 +166,13 @@
     height: 200px;
     border-radius: 50%;
     margin: 0px 15px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .teamMember a img{
     height: 35px;
     width: 35px;
+    box-shadow: none;
 }
 
 .teamSocials {
