--- a/prospera/src/Components/ForgotPasswordPage/ForgotPasswordPage.css
+++ b/prospera/src/Components/ForgotPasswordPage/ForgotPasswordPage.css
@@ -43,6 +43,12 @@
     padding: 20px;
 }
 
+.forgotForm input{
+    padding: 10px;
+    border: 1px solid #000;
+    border-radius: 5px;
+}
+
 .forgotDescription {
     display: flex;
     flex-direction: column;
