--- a/prospera/src/Components/RegisterPage/RegisterPage.css
+++ b/prospera/src/Components/RegisterPage/RegisterPage.css
@@ -10,7 +10,7 @@
     display: flex;
     background-color: white;
     border-radius: 20px;
-    /* overflow: hidden; */
+    overflow: hidden;
     width: 74rem;
     min-height: 47rem;
     box-shadow: 0 0 20px rgba(0,0,0,0.1);
@@ -18,7 +18,7 @@
 
 .registerBox input {
     padding: 10px;
-    border: 1px solid #ce93d8;
+    border: 1px solid #000;
     border-radius: 5px;
 
 }
