--- a/prospera/src/Components/Settings/Account.css
+++ b/prospera/src/Components/Settings/Account.css
@@ -21,9 +21,21 @@
     height: 60vh;
 }
 
+#updateForm input {
+    padding: 10px;
+    border: 1px solid #000;
+    border-radius: 5px;
+    font-size: 1rem;
+}
+
 .firstLastNames {
     display: flex;
+    justify-content: space-between;
     gap: 70px;
+}
+
+.firstLastNames .textInput{
+    width: 85%;
 }
 
 .textInput {
@@ -35,6 +47,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    width: 50%;
 }
 
 .acctButtons {
