--- a/prospera/src/Components/TopicSelectionPage/TopicSelectionPage.css
+++ b/prospera/src/Components/TopicSelectionPage/TopicSelectionPage.css
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     margin-top: 20px;
     padding: 10px;
     min-height: 60vh;
@@ -24,8 +25,9 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 10px;
-    margin: 20px 0;
+    align-items: center;
+    gap: 20px;
+    margin: 20px 400px;
 }
 
 .topicsList button {
