--- a/prospera/src/Components/Dashboard/Dashboard.css
+++ b/prospera/src/Components/Dashboard/Dashboard.css
@@ -12,7 +12,6 @@
     padding: 0;
     margin: 20px 15px;
     border-radius: 5px;
-
 }
 .dashboardBody {
     margin: 0;
@@ -24,6 +23,10 @@
     background-color: #212121;
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+
+.div.react-grid-layout.dash {
+    width: 10%;
 }
 
 .dash {
@@ -56,6 +59,7 @@
     
     width: 150px;
     margin: 10px auto;
+    margin-bottom: 20px;
     display: block;
 }
 
