Updated some css styling including changing the naming of some color from standard names to hexadecimals to maintain consistency.

--- a/prospera/src/Components/ForgotPasswordPage/ForgotPasswordPage.css
+++ b/prospera/src/Components/ForgotPasswordPage/ForgotPasswordPage.css
@@ -2,8 +2,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    color: black;
-    margin: 1rem 0 2rem 0;
+    color: #000;
+    margin: 4rem 0 6rem 0;
 }
 
 .return {
@@ -12,7 +12,7 @@
 
 .return span {
     display: flex;
-    color: #6303FF;
+    color: #5735df;
     font-size: 40px;
     font-weight: bold;
     transition: background 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
@@ -26,11 +26,11 @@
 
 .forgotBox {
     display: flex;
-    background-color: white;
+    background-color: #fff;
     border-radius: 20px;
     overflow: hidden;
-    width: 68rem;
-    height: 53rem;
+    width: 74rem;
+    height: 57rem;
     box-shadow: 0 0 20px rgba(0,0,0,0.1);
 }
 
@@ -89,7 +89,7 @@
 .forgotButtonArea {
     display: flex;
     flex-direction: column;
-    margin: 50px 0 0 0;
+    margin: 10px 0 0 0;
     gap: 0.8rem;
 }
 
