--- a/prospera/src/Components/Header/Header.css
+++ b/prospera/src/Components/Header/Header.css
@@ -115,7 +115,7 @@ button.register {
 
 .register:hover {
     border-color: #9b62f8;
-    background: #6303FF;
+    background: #5735df;
     color: #fff;
 }
 
