--- a/prospera/src/Components/AboutPage/AboutPage.css
+++ b/prospera/src/Components/AboutPage/AboutPage.css
@@ -26,6 +26,48 @@
     padding: 20px 30px 20px 30px;
 }
 
+@keyframes scale-up {
+    from {
+        scale: .7;
+    }
+}
+
+@keyframes slide-in {
+    from {
+        opacity: 0;
+        transform: translate(-100%, -50%);
+    }
+    to {
+        opacity: 1;
+        transform: translate(0%, -0%);
+    }
+}
+
+@keyframes slide-in-left {
+    from {
+        opacity: 0;
+        transform: translate(100%, 50%);
+    }
+    to {
+        opacity: 1;
+        transform: translate(0%, -0%);
+    }
+}
+
+@media (prefers-reduced-motion: no-preference) {
+    .leftAboutTextArea {
+        animation: slide-in linear both;
+        animation-timeline: view();
+        animation-range: 25vh 75vh;
+    }
+
+    .team h2 {
+        animation: slide-in-left linear both;
+        animation-timeline: view();
+        animation-range: 25vh 75vh;
+    }
+}
+
 .leftAboutBody, .rightAboutBody {
     flex: 1;
     padding: 1rem;
@@ -65,7 +107,7 @@
 
 /* Log In Button */
 .aboutLogInButton {
-    padding: 10px;
+    padding: 10px 20px;
     background-color: #000;
     color: #ffffff;
 
@@ -74,11 +116,9 @@
     transition: all 0.4s ease;
 
     outline: none;
+    width: 120%;
     position: relative;
     overflow: hidden;
-    
-    width: 120%;
-    margin: 0 10px;
 }
 
 .aboutLogInButton::after {
