--- a/prospera/src/Components/AddWidgetModal/AddWidgetModal.css
+++ b/prospera/src/Components/AddWidgetModal/AddWidgetModal.css
@@ -49,7 +49,7 @@
 
 .defaultSelect {
     font-family: 'Manrope';
-    color: black;
+    color: #000;
     font-weight: 500;
     margin: 1.5rem 0 1.5rem 0;
 }
@@ -58,7 +58,7 @@
     display: flex;
     flex-direction: column;
     font-family: 'Manrope';
-    color: black;
+    color: #000;
     margin: 1.5rem 0 1.5rem 0;
 }
 
@@ -66,7 +66,7 @@
     text-align: center;
     background-color: rgb(35, 35, 35);
     border-radius: 1.5rem;
-    color: white;
+    color: #fff;
     padding: 10px;
     margin: 0;
 }
