--- a/prospera/src/Components/ContactPage/ContactPage.css
+++ b/prospera/src/Components/ContactPage/ContactPage.css
@@ -13,7 +13,7 @@
 
 .contactTitle h1 {
     font-size: 2.5rem;
-    color: white;
+    color: #fff;
 }
 
 .contactTitle {
@@ -26,13 +26,32 @@
     padding: 0 15px 0 15px;
 }
 
+@keyframes slide-in-left {
+    from {
+        opacity: 0;
+        transform: translate(100%, 50%);
+    }
+    to {
+        opacity: 1;
+        transform: translate(0%, -0%);
+    }
+}
+
+@media (prefers-reduced-motion: no-preference) {
+    .contactTitle {
+        animation: slide-in linear both;
+        animation-timeline: view();
+        animation-range: 25vh 75vh;
+    }
+}
+
 .contactBody {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     gap: 125px;
-    color: white;
+    color: #fff;
     margin-bottom: 100px;
 }
 
@@ -128,11 +147,11 @@
     margin: 15px 0 0 0;
     padding: 15px 30px;
     border: 2px solid #2c2c2c;
-    background-color: #1a1a1a;
+    background-color: #000;
     color: #ffffff;
     font-size: 1rem;
     cursor: pointer;
-    border-radius: 30px;
+    border-radius: 7px;
     transition: all 0.4s ease;
     outline: none;
     position: relative;
