--- a/prospera/src/Components/LoginPage/LoginPage.css
+++ b/prospera/src/Components/LoginPage/LoginPage.css
@@ -2,17 +2,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    color: black;
-    margin: 5rem 0 7rem 0;
+    color: #000;
+    margin: 4rem 0 7rem 0;
 }
 
 .loginBox {
     display: flex;
-    background-color: white;
+    background-color: #fff;
     border-radius: 20px;
     overflow: hidden;
-    width: 63rem;
-    height: 39rem;
+    width: 74rem;
+    height: 47rem;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
@@ -28,6 +28,7 @@
 .loginDescription {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     margin: 0 0 60px 0;
 }
@@ -44,7 +45,7 @@
     font-family: 'Manrope';
     font-size: 0.9rem;
     text-align: end;
-    color: black;
+    color: #000;
     font-weight: bold;
     text-decoration: none;
 }
@@ -67,7 +68,7 @@
 
 .showPasswordBtn {
     border: none;
-    background-color: white;
+    background-color: #fff;
 }
 
 .showSymbol img {
@@ -76,7 +77,7 @@
 
 .showPasswordBtn:hover {
     cursor: pointer;
-    background-color: white;
+    background-color: #fff;
 }
 
 .loginButtonArea {
@@ -118,7 +119,6 @@
     font-weight: bold;
 }
 
-/* Override previous BG color and font color selections for register redirect button */
 .goToRegisterButton {
     background-color: #ffffff;
     color: #1a1a1a;
@@ -151,10 +151,82 @@
 
 .goToRegisterButton:hover {
     border-color: #9b62f8;
-    background: #6303FF;
+    background: #5735df;
     color: #fff;
 }
 
 .headerSpace {
     height: 81px;
 }
+
+.logInTitle {
+    display: flex;
+    align-items: baseline;
+    justify-content: center;
+    align-items: center;
+}
+
+.logInTitle h1 {
+    margin: 0;
+    font-size: 2rem;
+}
+
+.animated-text {
+    position: relative;
+    font-family: 'Arial', sans-serif;
+    font-weight: bold;
+    font-size: 2rem;
+    line-height: 1.2;
+    height: 2.6rem;
+    display: inline-block;
+    min-width: 140px;
+    overflow: hidden;
+    text-align: right;
+}
+
+.text {
+    position: absolute;
+    white-space: nowrap;
+    opacity: 0;
+    right: 10px;
+    transform: translateY(100%);
+    animation: text-fade-move 27s infinite;
+}
+
+.text:nth-child(1) { animation-delay: 0s; }
+.text:nth-child(2) { animation-delay: 3s; }
+.text:nth-child(3) { animation-delay: 6s; }
+.text:nth-child(4) { animation-delay: 9s; }
+.text:nth-child(5) { animation-delay: 12s; }
+.text:nth-child(6) { animation-delay: 15s; }
+.text:nth-child(7) { animation-delay: 18s; }
+.text:nth-child(8) { animation-delay: 21s; }
+.text:nth-child(9) { animation-delay: 24s; }
+
+@keyframes text-fade-move {
+    0%, 11% { 
+        opacity: 0;
+        transform: translateY(100%);
+    }
+    11%, 22% { 
+        opacity: 1;
+        transform: translateY(0);
+    }
+    22%, 33% { 
+        opacity: 0;
+        transform: translateY(-100%);
+    }
+}
+
+@media (max-width: 768px) {
+    .animated-text, h1 {
+        font-size: 1.5rem;
+    }
+}
+    
+@media (max-width: 480px) {
+    .animated-text, h1 {
+        font-size: 1.2rem;
+    }
+}
+
