--- a/prospera/src/Components/Footer/Footer.css
+++ b/prospera/src/Components/Footer/Footer.css
@@ -1,15 +1,15 @@
 .footer {
     width: 100vw;
-
+    
     background-color: #171717;
     color: #fff;
-
+    
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
     padding-top: 20px;
-
+    
     position: absolute;
     bottom: 0;
 }
@@ -91,4 +91,21 @@ hr {
     width: 90%;
     color: #ececec;
     border-width: 0.1px;
+}
+
+@media screen and (max-width: 768px) {
+    .socials {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .socials a {
+        margin-bottom: 10px;
+    }
+
+    hr {
+        width: 100%;
+    }
 }
