--- a/prospera/src/Components/LoginPage/LoginPage.css
+++ b/prospera/src/Components/LoginPage/LoginPage.css
@@ -30,7 +30,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 0 0 60px 0;
+    margin: 0 0 30px 0;
 }
 
 .loginDescription h1 {
@@ -182,6 +182,7 @@
     min-width: 140px;
     overflow: hidden;
     text-align: right;
+    color: #5735df;
 }
 
 .text {
@@ -218,15 +219,11 @@
     }
 }
 
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
     .animated-text, h1 {
         font-size: 1.5rem;
     }
-}
+} */
     
-@media (max-width: 480px) {
-    .animated-text, h1 {
-        font-size: 1.2rem;
-    }
-}
+
 
